syntax = "proto3";

option go_package = "github.com/loomnetwork/gamechain/types/nullable/nullable_pb";

message Int32Value {
    int32 value = 1;
}

message Int64Value {
    int64 value = 1;
}

message StringValue {
    string value = 1;
}

message BoolValue {
    bool value = 1;
}